bookle-core/tests/snapshots/snapshot_tests__typst_output.snap
---
source: bookle-core/tests/snapshot_tests.rs
expression: typst_source
---
#set page(
  width: 210mm,
  height: 297mm,
  margin: (
    top: 2.5cm,
    bottom: 2.5cm,
    left: 2cm,
    right: 2cm,
  ),
)

#set text(size: 11pt)
#set heading(numbering: "1.1")

#align(center)[
  #v(30%)
  #text(size: 24pt, weight: "bold")[The Art of Testing]
  #v(1em)
  #text(size: 14pt)[Jane Doe]
  #text(size: 14pt)[John Smith]
]

#pagebreak()

#outline(title: "Contents", depth: 2)

#pagebreak()

= Introduction

== Welcome <welcome>

This is a *comprehensive* guide to testing with _real examples_.

- First item
- Second item
- Third item with `inline code`


#pagebreak()

= Advanced Topics

Let's explore some advanced concepts.

```rust
fn main() {
    println!("Hello, world!");
}
```

#quote(block: true)[
Testing is the key to quality software.


]

#line(length: 100%)

Visit our #link("https://example.com")[website] for more.


#pagebreak()

= Tables and Special Formatting

#table(
  columns: 2,
  [*Feature*],
  [*Status*],
  [Unit Tests],
  [*Complete*],
  [Integration Tests],
  [_In Progress_],
)

Water formula: H#sub[2]O

E = mc#super[2]

#strike[Deprecated feature]


#pagebreak()
